--- a/client/src/css/mainpage.css
+++ b/client/src/css/mainpage.css
@@ -1,10 +1,4 @@
-.body-patient {
-    font-family: Arial, sans-serif;
-    background-color: paleturquoise;
-    color: #333;
-    margin: 0;
-  }
-  header {
+.header {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -12,64 +6,39 @@
     background-color: #1c3f5f;
     color: #fff;
   }
-  .patient-name {
-    font-size: 20px;
-    font-weight: bold;
-  }
-  .logout-button {
-    cursor: pointer;
-  }
-  .upload-button {
-    margin-top: 20px;
-    display: flex;
-    justify-content: center;
-  }
-  .upload-button button {
-    padding: 10px 20px;
-    font-size: 16px;
-    background-color: #1c3f5f;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-  .upload-button button:hover {
-    background-color: #0e2841;
-  }
-  .upload-form {
+
+  .maindiv {
     display: flex;
     margin-top: 20px;
     padding: 20px;
+    margin-top: 19%;
+    justify-content: center;
     border-radius: 5px;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
   }
-  .upload-form label {
-    display: block;
-    margin-bottom: 10px;
+  .typing-effect{
+    display: flex;
   }
-  .upload-form input[type="text"],
-  .upload-form textarea,
-  .upload-form select {
-    width: 100%;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+
+  ul{
+    display: flex;
+    list-style: none;
   }
-  .upload-form input[type="file"] {
-    margin-top: 5px;
-  }
-  .upload-form input[type="submit"] {
+  .maindiv ul li{
+    text-decoration: none;
+    padding: 10px 20px;
+    border-radius: 20px;
+    margin: 0 10px;
     cursor: pointer;
-    background-color: #1c3f5f;
-    color: #fff;
-    border: none;
-    padding: 10px 16px;
-    border-radius: 4px;
+    font-weight: 700;
+    font-size: 1.1rem;
+    transition: all 0.3s ease;
   }
-  .upload-form input[type="submit"]:hover {
-    background-color: #0e2841;
+  .maindiv ul li:hover{
+    font-size: 1rem;
+    color:black;
+    background-color: wheat;
   }
+
   .submissions-container {
     margin-top: 20px;
     background-color: #fff;
