--- a/client/src/css/login.css
+++ b/client/src/css/login.css
@@ -1,22 +1,29 @@
-
+    .mainbody{
+      background-color: #1c2331;
+    }
     .body {
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
-      background-color: paleturquoise;
+     
+     
     }
 
     .container-p {
-      text-align: center;
-      background-color: #fff;
-      padding: 40px;
-      box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.2);
+      display: flex;
+    margin-top: 20px;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
     }
 
     .container-p img {
-      width: 150px;
-      height: 150px;
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      margin-top: 65px;
+      margin-right: 15px;
     }
 
     .form-group {
