--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -17,11 +17,12 @@ body {
   align-items: center;
   height:60px;
   background-color: #1c2331;
-  box-shadow: 0 2px 4px rgb(247, 243, 243);
+  padding: 0 20px;
+  margin-top: 10px;
 }
 .head{
   font-family: 'Poppins', sans-serif;
-  font-size: 1.5rem;
+  font-size: 1.8rem;
 }
 ul{
   display: flex;
@@ -36,12 +37,13 @@ ul{
   font-weight: 700;
   font-size: 1.1rem;
   transition: all 0.3s ease;
+  color: #fff;
+  text-decoration: none;
 }
 .nav ul li:hover{
   font-size: 1rem;
-  color:black;
-  background-color: rgb(41, 41, 87);
-  color:  paleturquoise;
+  background-color: paleturquoise;
+  color: rgb(41, 41, 87);
 }
 .btn1{
   margin-right: 20px;
@@ -67,6 +69,8 @@ ul{
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 20px 0;
+  text-align: center;
 }
 
 .button_text a {
@@ -75,8 +79,10 @@ ul{
 }
 
 .button_label {
-  margin-top: 10px;
+  margin-top: 13%;
   font-weight: bold;
+  font-size: medium;
+  color: #eee; /* Light colored text */
 }
 
 /* Image styles */
@@ -85,6 +91,12 @@ ul{
   height: auto;
   border-radius: 50%;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.imge:hover {
+  transform: scale(1.1);
+  box-shadow: 0px 4px 8px  paleturquoise;
+  z-index: 1;
 }
 
 /* Responsive styles */
