--- a/client/src/css/mainpage.css
+++ b/client/src/css/mainpage.css
@@ -7,13 +7,43 @@
     color: #fff;
   }
 
-  .maindiv {
+  .lower-body{
     display: flex;
-    margin-top: 20px;
-    padding: 20px;
-    margin-top: 19%;
+    padding: 0 20px;
     justify-content: center;
     border-radius: 5px;
+    margin-top: 10%;
+  }
+
+  .top{
+    display: flex;
+    justify-content:center;
+  }
+  
+  .hello-text {
+    text-align: center;
+    margin-top: 30px;
+    font-size: 3rem;
+    /*margin-right: auto;
+    margin-left: auto;
+    /* Adjust margin-top as needed */
+    color: #fff; /* Ensure text color is visible against the background */
+    font-size: 2rem; /* Adjust font size as needed */
+    position:absolute;
+    top: 41%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+        color: white;
+        text-shadow: 2px 2px 4px #000000,
+  }
+  
+
+  .maindiv {
+    display: flex;
+    padding: 0 20px;
+    justify-content: center;
+    border-radius: 5px;
+    margin-top: 30px;
   }
   .typing-effect{
     display: flex;
@@ -24,20 +54,24 @@
     list-style: none;
   }
   .maindiv ul li{
+    color:white;
+    font-size: large;
     text-decoration: none;
     padding: 10px 20px;
     border-radius: 20px;
     margin: 0 10px;
     cursor: pointer;
     font-weight: 700;
-    font-size: 1.1rem;
+    font-size:medium;
     transition: all 0.3s ease;
   }
+
   .maindiv ul li:hover{
-    font-size: 1rem;
-    color:black;
-    background-color: wheat;
+    font-size: 1.2rem;
+    background-color: paleturquoise;
+    color: hsl(240, 36%, 25%);
   }
+
 
   .submissions-container {
     margin-top: 20px;
@@ -75,12 +109,7 @@
     box-shadow: rgb(45, 45, 72);
     text-decoration: none;
   }
-  .top{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
+
+
 
   
