--- a/client/src/css/register.css
+++ b/client/src/css/register.css
@@ -15,7 +15,7 @@
   margin-top: 20px;
   padding: 20px;
   border-radius: 5px;
-  box-shadow: 0 2px 6px rgba(232, 226, 226, 0.2);
+  box-shadow: 0 2px 6px #70CFEE;
   }
 
   .container-p img {
